--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@ $control-hover-bg: #d1d5d9;
 $separator-color: #dee6eb;
 $secondary-text-color: #666;
 $panel-title-text-color: rgb(109, 127, 139);
+$selection-color: rgba(56, 114, 224, 0.8);
 
 // Container
 .argocd-application-map {
@@ -117,5 +118,59 @@ $panel-title-text-color: rgb(109, 127, 139);
     text-align: center;
     vertical-align: middle;
     width: 32px;
+  }
+
+  // Node selection states
+  &__node {
+    &--default {
+      opacity: 1;
+    }
+
+    &--selected {
+      opacity: 1;
+      position: relative;
+    }
+
+    &--unselected {
+      opacity: 0.25;
+    }
+  }
+
+  // Edge selection states
+  &__edge {
+    &--default {
+      stroke: #777;
+      stroke-width: 1;
+      stroke-dasharray: 3, 3;
+      stroke-opacity: 1;
+    }
+
+    &--selected {
+      stroke: #777;
+      stroke-width: 1;
+      stroke-dasharray: none;
+      stroke-opacity: 1;
+    }
+
+    &--unselected {
+      stroke: #777;
+      stroke-width: 1;
+      stroke-dasharray: 3, 3;
+      stroke-opacity: 0.25;
+    }
+
+    &__marker {
+      &--default {
+        opacity: 1;
+      }
+
+      &--selected {
+        opacity: 1;
+      }
+
+      &--unselected {
+        opacity: 0.5;
+      }
+    }
   }
 }
