--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,46 +31,14 @@ $color-white: #ffffff;
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-  }
 
-  // ---------------------------------------------------------------------------
-  // Controls Panel (buttons, etc.)
-  // ---------------------------------------------------------------------------
-  &__controls-panel {
-    margin-left: 10px;
-    padding: 5px;
-    box-shadow: 1px 1px 3px $color-shadow;
-    background: $color-white;
-  }
-
-  &__control-button {
-    padding: 5px;
-    margin: 2px;
-    color: $color-control-text;
-    border-radius: 5px;
-    vertical-align: middle;
-    font-weight: 500;
-    line-height: 1.4;
-    text-align: center;
-    cursor: pointer;
-    font-size: 16px;
-    background: transparent;
-    border: 1px solid transparent !important;
-    user-select: none;
-    text-transform: uppercase;
-    transition:
-      background-color 0.2s,
-      border 0.2s,
-      color 0.2s;
-
-    &:hover {
-      background-color: $color-control-hover-bg;
+    // ---------------------------------------------------------------------------
+    // Graph options panel
+    // ---------------------------------------------------------------------------
+    & .graph-options-panel {
+      z-index: 5;
+      margin: 10px 0 0 10px;
     }
-  }
-
-  &__separator {
-    border-right: 1px solid $color-separator;
-    padding: 6px 0;
   }
 
   // ---------------------------------------------------------------------------
