:lipstick:: Make all quick actions to appear ealier
Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/src/components/application-map/node/QuickActionButton.scss
+++ b/src/components/application-map/node/QuickActionButton.scss
@@ -138,7 +138,7 @@
       //
       @for $i from 1 through 5 {
         .application-resource-tree__node:hover &:nth-child(#{$i}) {
-          transition-delay: 0.2s + $i * 0.1s;
+          transition-delay: $i * 0.02s;
         }
       }
 
